Service/src/main/java/org/example/error/InvalidParametersException.java
package org.example.error;

public class InvalidParametersException extends Exception {
    public InvalidParametersException(String message) {
        super(message);
    }
}
